Fix Grid Overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,15 @@
 body {
-    background-color: black;
-    
-}
-
-.container {
     display: grid;
-    grid-template-columns: 300px 1fr 1fr;
-    grid-template-rows: 15% 1fr 1fr;
+    grid-template-columns: 300px 1fr;
+    grid-template-rows: 200px 1fr;
     background-color: grey;
-    height: calc(100vh - 16px);
+    min-height: calc(100vh - 16px);
 }
 
 .sidebar {
     background-color: blue;
     grid-column: 1/2;
-    grid-row: 1/4;
+    grid-row: 1/3;
     display: grid;
     grid-template-rows: 10% 25% 1fr 1fr;
     gap: 10px;
@@ -35,12 +30,15 @@ body {
 
 .header {
     background-color: blueviolet;
-    grid-column: 2/4;
+    grid-column: 2/3;
     display: grid;
     grid-template: 1fr 1fr / 70% 1fr;
 }
 
-.searchbar, .account, .welcome, .project-buttons {
+.searchbar,
+.account,
+.welcome,
+.project-buttons {
     display: grid;
     align-items: center;
     padding: 15px;
@@ -66,8 +64,8 @@ body {
 
 .content {
     margin-top: 20px;
-    grid-row: 2/4;
-    grid-column: 2/4;
+    grid-row: 2/3;
+    grid-column: 2/3;
     background-color: grey;
     display: grid;
     gap: 5px;
@@ -81,19 +79,22 @@ body {
     grid-template-rows: 25px 1fr;
 }
 
-.heading {padding-left: 45px;}
+.heading {
+    padding-left: 45px;
+}
 
 .projects .card-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 30px;
-    padding:30px;
+    padding: 30px;
 }
 
 .card {
     background-color: white;
     border-radius: 25px;
-    padding:30px;
+    padding: 30px;
+    min-height: 150px;
 }
 
 .annoucements {
